...
  <string name="TVA_add_comment">Add a comment…</string>
  <string name="display_name">Display name</string>
  <string name="backup_BPr_header">Backups</string>
  <string name="backup_BAc_export">Backup now</string>
  <string name="backup_BAc_import">Import backup</string>
...
  <string name="TLA_menu_sort">Sort</string>
  <string name="TLA_menu_search">Search</string>
  <string name="TLA_menu_settings">Settings</string>
  <string name="app_settings">App settings</string>
  <string name="TAd_actionEditTask">Edit</string>
  <string name="customize_drawer">Customize drawer</string>
...
  <string name="FLA_search_filter">Matching \'%s\'</string>
  <string name="FLA_new_filter">Create new filter</string>
  <string name="TEA_title_hint">Task name</string>
  <string name="TEA_importance_label">Priority</string>
  <string name="TEA_add_subtask">Add subtask</string>
...
  <string name="TEA_estimatedDuration_label">How long will it take?</string>
  <string name="TEA_elapsedDuration_label">Time already spent</string>
  <string name="save">Save</string>
  <string name="TEA_timer_est">Est. %s</string>
  <string name="TEA_timer_elap">Elapsed %s</string>
...
  <string name="TEA_creation_date">Creation date</string>
  <string name="none">None</string>
  <string name="EPr_edit_screen_options">Edit screen options</string>
  <string name="EPr_beastMode_reset">Reset to defaults</string>
  <string name="EPr_fullTask_title">Show full task title</string>
  <string name="EPr_show_task_edit_comments">Show comments in task edit</string>
  <string name="task_list_options">Task list options</string>
  <string name="EPr_cal_end_or_start_at_due_time">Calendar event time</string>
  <string name="EPr_cal_end_at_due_time">End calendar events at due time</string>
...
  <string name="EPr_manage_delete_all_gcal">Delete all calendar events for tasks</string>
  <string name="EPr_manage_delete_all_gcal_message">Do you really want to delete all your events for tasks?</string>
  <string name="task_defaults">Task defaults</string>
  <string name="EPr_default_importance_title">Default priority</string>
  <string name="default_start_date">Default start date</string>
...
  <string name="location_update_interval_1_hour">Every hour</string>
  <string name="location_update_interval_2_hours">Every 2 hours</string>
  <string name="BFE_Active">My Tasks</string>
  <string name="BFE_Recent">Recently modified</string>
  <string name="CFA_button_add">Add Criteria</string>
  <string name="CFC_dueBefore_text">Due By: ?</string>
...
  <string name="repeat_type_completion_capitalized">Completion date</string>
  <string name="repeat_snackbar">%1$s rescheduled for %2$s</string>
  <string name="new_tag">Create new tag</string>
  <string name="new_list">Create new list</string>
  <string name="local_list_title">This is a local list</string>
...
  <string name="comment">Comment</string>
  <string name="TPl_notification">Timers Active for %s!</string>
  <string name="TEA_timer_controls">Timer</string>
  <string name="TEA_timer_start">Start timer</string>
  <string name="TEA_timer_stop">Stop timer</string>
  <string name="TEA_timer_comment_started">started this task:</string>
  <string name="TEA_timer_comment_stopped">stopped doing this task:</string>
...
  </plurals>
  <string name="now">Now</string>
  <string name="today">Today</string>
  <string name="tomorrow">Tomorrow</string>
  <string name="next_sunday">Next Sun</string>
...
  <string name="widget_show_menu">Show menu</string>
  <string name="widget_show_dividers">Show dividers</string>
  <string name="notifications">Notifications</string>
  <string name="quiet_hours">Quiet hours</string>
  <string name="quiet_hours_in_effect">Quiet hours are in effect</string>
...
  <string name="geofence_radius">Geofence radius</string>
  <string name="location_radius_meters">%s m</string>
  <string name="tags">Tags</string>
  <string name="change_priority">Change priority</string>
  <string name="filters">Filters</string>
  <string name="date_shortcut_hour">For an hour</string>
  <string name="date_shortcut_morning">Morning</string>
...
  <string name="show_edit_screen_without_unlock">Show edit screen without unlock</string>
  <string name="show_edit_screen_without_unlock_summary">Enables use of Quick Settings tile without unlocking device</string>
  <string name="default_list">Default list</string>
  <string name="default_tags">Default tags</string>
  <string name="default_recurrence">Default recurrence</string>
...
  <string name="opacity_row">Row opacity</string>
  <string name="opacity_footer">Footer opacity</string>
  <string name="theme">Theme</string>
  <string name="color">Color</string>
  <string name="icon">Icon</string>
  <string name="launcher_icon">Launcher icon</string>
  <string name="theme_black">Black</string>
  <string name="theme_light">Light</string>
...
  <string name="delete_selected_tasks">Delete selected tasks?</string>
  <string name="copy_selected_tasks">Copy selected tasks?</string>
  <string name="date_and_time">Date and time</string>
  <string name="user">User</string>
  <string name="password">Password</string>
...
  <string name="button_subscribe">Subscribe</string>
  <string name="button_unsubscribe">Cancel subscription</string>
  <string name="about">About</string>
  <string name="license_summary">Tasks is libre open-source software, licensed under the GNU General Public License v3.0</string>
  <string name="pro_dashclock_extension">Dashclock extension</string>
...
  <string name="subtasks_multilevel_google_task">Multi-level subtasks not supported by Google Tasks</string>
  <string name="subtasks_multilevel_microsoft">Multi-level subtasks not supported by Microsoft To Do</string>
  <string name="enter_tag_name">Enter tag name</string>
  <string name="choose_synchronization_service">Select a platform</string>
  <string name="caldav_selection_description">Synchronization based on open internet standards</string>
...
  <string name="caldav_account_description">Requires an account with a CalDAV service provider or a self-hosted server. Find a service provider by visiting tasks.org/caldav</string>
  <string name="etesync_account_description">Requires an account with EteSync.com or a self-hosted server</string>
  <string name="preferences_look_and_feel">Look and feel</string>
  <string name="preferences_advanced">Advanced</string>
  <string name="documentation">Documentation</string>
  <string name="wearable_notifications">Wearable notifications</string>
...
  <string name="chips">Chips</string>
  <string name="chip_appearance">Chip appearance</string>
  <string name="places">Places</string>
  <string name="place_settings">Place settings</string>
  <string name="navigation_drawer">Navigation drawer</string>
  <string name="hide_unused_tags">Hide unused tags</string>
  <string name="hide_unused_places">Hide unused places</string>
...
  <string name="filter_after_today">After today</string>
  <string name="filter_no_tags">No tags</string>
  <string name="add_tags">Add tags</string>
  <string name="filter_high_priority">High priority</string>
  <string name="filter_medium_priority">Medium priority</string>
...
  <string name="banner_subscription_required_body">Pay whatever you want to unlock %s synchronization</string>
  <string name="enjoying_tasks">Enjoying Tasks?</string>
  <string name="donate">Donate</string>
  <string name="donate_nag">Consider showing your support with a donation!</string>
  <string name="donate_today">Donate today</string>
...
  <string name="on_launch">On launch</string>
  <string name="open_last_viewed_list">Open last viewed list</string>
  <string name="local_lists">Local lists</string>
  <string name="lists">Lists</string>
  <string name="reset_sort_order">Reset sort order</string>
...
  <string name="advanced_tools">Advanced tools</string>
  <string name="advanced_tools_description">Google Places, CalDAV, EteSync, and more!</string>
  <string name="more_options">More options</string>
